# SCHEMA-Jobs-project

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini
schema-jobs/: pyproject.toml
schema-jobs/schema_jobs/jobs/configuration/: database_configuration.py  table_configs.py
schema-jobs/schema_jobs/jobs/deploy/: deploy_database_tables.py
schema-jobs/schema_jobs/jobs/migration/: deploy_migration.py
schema-jobs/schema_jobs/jobs/utility/schema/: database.py  migration.py  schemas.py  sql.py  table.py
workflows/: python-app.yml
