[tool.poetry]
name = "schema-jobs"
version = "0.1.0"
description = ""
authors = ["Brian L <bclipp770@gmail.com>"]
readme = "README.md"
packages = [{include = "schema_jobs"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
